make radio buttons have a bigger font-size to try to fix my website being a tiny bit zoomed in on mobile (products page only)

--- a/scss/products.scss
+++ b/scss/products.scss
@@ -7,6 +7,7 @@
 }
 
 .cat_radio_button {
+  font-size: 1.2rem;
   display: none;
 }
 
